# decoris/server/routes/client.js
@@ -7,6 +7,6 @@ router.post("/get-client/:name", clientController.getFilteredClientsListByName);
 router.post("/get-clients", clientController.getFilteredClientsListByParametrs);
 router.post("/add-client", clientController.createClient);
 router.put("/update-client/:id", clientController.updateClient);
-router.delete("/delete-client/:id", clientController.deleteClientById);
+router.delete("/delete-client/:name", clientController.deleteClientById);
 
 module.exports = router;
